Add details to build container image